/* $Id: ChangeLog 557 2006-09-28 15:56:25Z knut.osmundsen@oracle.com $ */

2006-09-28:
    - kBuild/header.kmk, kBuild/env.sh, kBuild/tools/GCC4MACH.kmk, kBuild/bin/x86.darwin/, src/gmake, Config.kmk:
        o Initial Mac OS X / Darwin bootstrapping.

2006-09-23:
    - kBuild/footer.kmk:
        o Recursive template inheritance.
    - kBuild/header.kmk, kBuild/footer.kmk:
        o Removed some checks for features which are present in both gmake 3.81 and kmk.
          Anyone trying to bootstrap kBuild will have to build gmake 3.81 first.
    - Config.kmk, src/gmake, src/lib, src/kDepPre, src/kDepIDB:
        o Allow all kinds of ways of saying Windows in BUILD_TARGET.
    - kBuild/bin/x86.win32/:
        o Rebuilt kmk.exe.
    - kBuild/bin/x86.os2/:
        o Added kDepPre.exe and kDepIDB.exe.
        o Rebuilt kmk.exe and kmk_gmake.exe.
    - src/gmake:
        o Update KMK_FEATURES to include the optimizations from earlier this week.
        o Regenerated config.h.os2 and make adjustments to make it all
          build quietly on OS/2.
    - kBuild/envos2.cmd:
        o Environment script (REXX) for OS/2.

2006-09-19:
    - kBuild/bin/x86.win32/:
        o Rebuilt kmk.exe and kmk_gmake.exe.
    - src/gmake:
        o Fixed some optimization bugs in kbuild.c.

2006-09-18:
    - kBuild/gmake:
        o Don't send put j1 in MAKEFLAGS on windows, somehow that doesn't work.
        o Fixed some variable name typos in kbuild.c.
        o Fixed missing expansion in kbuild_lookup_variable.
        o A real attempt at fixing the double quoting problem on windows. ash seems to want a
          space between a double quote enclosing the last argument on the commandline and the
          double quote enclosing the commandline (the -c argument).
        o Fixed a newline escape problem when using batch_mode_shell on windows with kmk_ash.

2006-09-17:
    - kBuild/gmake:
        o Optimization summary: libc from ~21 seconds -> 7-8 seconds (os2/nt).