@@ -1,4 +1,11 @@
-/* $Id: ChangeLog 557 2006-09-28 15:56:25Z knut.osmundsen@oracle.com $ */
+/* $Id: ChangeLog 576 2006-11-23 09:58:23Z knut.osmundsen@oracle.com $ */
+
+2006-11-23:
+    - kBuild/header.kmk, kmk:
+        o Proper versioning.
+    - kmk:
+        o Support SDK.$(BUILD_TARGET_ARCH) too (only bug).
+        o Fixed a bug when gather SDKs.
 
 2006-09-28:
     - kBuild/header.kmk, kBuild/env.sh, kBuild/tools/GCC4MACH.kmk, kBuild/bin/x86.darwin/, src/gmake, Config.kmk:
